[package]
name = "wincast"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
native_db = "0.7.1"
native_model = "0.4.19"
once_cell = "1.19.0"
opener = "0.7.2"
regex = "1.10.6"
serde = "1.0.207"
sqlite = "0.36.1"
systemicons = "0.7.0"
walkdir = "2.5.0"
winreg = "0.52.0"
winsafe = { version = "0.0.22", features = ["kernel"] }
