[package]
name = "wincast"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
colored = "2.1.0"
crossterm = "0.28.1"
opener = "0.7.2"
prettytable-rs = "0.10.0"
ratatui = "0.28.1"
sqlite = "0.36.1"
systemicons = "0.7.0"
walkdir = "2.5.0"
whoami = "1.5.1"
